package edu.fiuba.algo3.modelo.preguntas;

import edu.fiuba.algo3.modelo.bonus.Multiplicador;

public interface PreguntaConPenalidad {

    public Multiplicador getMultiplicadorX2();

    public Multiplicador getMultiplicadorX3();
}
